@@ -1,17 +1,13 @@
 package thc.parser.search;
 
-import com.fasterxml.jackson.core.JsonParser;
 import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.ObjectReader;
-import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Iterables;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import reactor.core.publisher.Mono;
 import thc.domain.WebItem;
-import thc.parser.HttpParseRequest;
+import thc.parser.RestParseRequest;
 
-import java.io.InputStream;
 import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
@@ -19,12 +15,11 @@ import java.util.Map;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
-public class GoogleImageSearchRequest implements HttpParseRequest<List> {
+public class GoogleImageSearchRequest implements RestParseRequest<List> {
 	protected static final Logger log = LoggerFactory.getLogger(GoogleImageSearchRequest.class);
 
-	private static final ObjectReader jsonReader = new ObjectMapper().configure(JsonParser.Feature.ALLOW_SINGLE_QUOTES, true).readerFor(Map.class);
 	public static final String KEY_SEPARATOR = ",";
-	public static final String URL = "https://www.googleapis.com/customsearch/v1?cx=011552421082581973471%3A0ge1n0sksf4&filter=1&safe=medium&searchType=image";
+	public static final String URL = "https://www.googleapis.com/customsearch/v1";
 	public static final int NUM_RESULT = 10;
 	public static volatile Iterator<String> keys;
 
@@ -40,12 +35,16 @@ public class GoogleImageSearchRequest implements HttpParseRequest<List> {
 
 	@Override
 	public Map<String, String> queryParams() {
-		return ImmutableMap.of(
+		return Map.of(
 				"q", query,
 				"imgSize","medium",
 				"imgType","clipart",
 				"num", String.valueOf(NUM_RESULT),
-				"key",keys.next()
+				"key",keys.next(),
+				"cx", "011552421082581973471:0ge1n0sksf4",
+				"filter", "1",
+				"safe", "medium",
+				"searchType", "image"
 		);
 	}
 
@@ -54,25 +53,23 @@ public class GoogleImageSearchRequest implements HttpParseRequest<List> {
 	}
 
 	@Override
-	public List<WebItem> parseResponse(InputStream response) {
+	public Mono<List> parseResponse(JsonNode node) {
 		try {
-			JsonNode node = jsonReader.readTree(response);
-
 			if (!node.has("items")) {
 				log.warn("No item found from body", node.asText());
-				return Collections.EMPTY_LIST;
+				return Mono.just(Collections.EMPTY_LIST);
 			}
 
 			JsonNode items = node.get("items");
 			log.debug("Query result items: {}", items.toString());
 
-			return IntStream.range(0, NUM_RESULT)
+			return Mono.just(IntStream.range(0, NUM_RESULT)
 					.mapToObj(i -> items.get(i))
 					.map(GoogleImageSearchRequest::toWebItem)
-					.collect(Collectors.toList());
+					.collect(Collectors.toList()));
 		} catch (Exception e) {
 			log.error("fail to parse response", e);
-			return Collections.EMPTY_LIST;
+			return Mono.just(Collections.EMPTY_LIST);
 		}
 	}
 
